# singularity

./: CMakeLists.txt
include/: sl.hpp
include/core/cpu/: cache.hpp  cpu.hpp  cpuid.hpp  feature.hpp  other.hpp  vendorid.hpp  version.hpp
include/core/platform/: compiler.hpp  cpu.hpp  endian.hpp  os.hpp  platform.hpp
include/sl/: core.hpp  cpu.hpp  main.hpp  memory.hpp  unicon.hpp
include/sl/core/: cpu.hpp  error.hpp  platform.hpp  srcloc.hpp  typedef.hpp
include/sl/core/cpu/: cache.hpp  context.hpp  cpuid.hpp  endian.hpp  feature.hpp  other.hpp  vendor.hpp  vendorid.hpp  version.hpp
include/sl/core/error/: error.hpp  errorcode.hpp  exception.hpp
include/sl/core/platform/: compiler.hpp  cpu.hpp  endian.hpp  host.hpp  lang.hpp  os.hpp
include/sl/core/srcloc/: srcloc.hpp
include/sl/cpu/: context.hpp  cpuid.hpp  endian.hpp
include/sl/main/: call.hpp  information.hpp  invoke.hpp  preparation.hpp
include/sl/memory/: allocate.hpp  allocator.hpp  structor.hpp
include/sl/memory/allocate/: phyalloc.hpp  viralloc.hpp
include/sl/memory/allocator/: basicalloc.hpp
include/sl/memory/structor/: constructor.hpp  destructor.hpp  new.hpp
include/sl/unicon/: array.hpp
